WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115115
85 inspector tests asserting in DrawingAreaProxyImpl::updateAcceleratedCompositingMode() when there is a stale WebKitTestRunner preference
https://bugs.webkit.org/show_bug.cgi?id=115115
Summary
85 inspector tests asserting in DrawingAreaProxyImpl::updateAcceleratedCompos...
Simon Fraser (smfr)
Reported
2013-04-24 09:50:57 PDT
Lots of insepctor tests are asserting on the WK2 bot after
http://trac.webkit.org/changeset/149006
Attachments
proposed fix
(9.07 KB, patch)
2013-10-30 12:45 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-04-24 09:51:40 PDT
DrawingAreaImpl 0x7f8844a2df10 updateAcceleratedCompositingMode backingStoreStateID=1 m_currentBackingStoreStateID=0 ARGUMENT BAD: backingStoreStateID, backingStoreStateID <= m_currentBackingStoreStateID
Simon Fraser (smfr)
Comment 2
2013-04-24 14:03:03 PDT
I worked around this by nuking the on-disk prefs that specified that the inspector should use accelerated drawing.
Alexey Proskuryakov
Comment 3
2013-08-31 22:51:32 PDT
defaults delete WebKitTestRunner We need to do something about ever using persistent preferences in WKTR.
Simon Fraser (smfr)
Comment 4
2013-09-03 11:12:23 PDT
Perhaps the scripts should do 'defaults delete WebKitTestRunner' each time?
Alexey Proskuryakov
Comment 5
2013-10-30 01:10:38 PDT
Doing that in
bug 29751
.
Alexey Proskuryakov
Comment 6
2013-10-30 12:45:36 PDT
Created
attachment 215552
[details]
proposed fix Actually no, doing it here.
WebKit Commit Bot
Comment 7
2013-10-30 16:41:24 PDT
Comment on
attachment 215552
[details]
proposed fix Clearing flags on attachment: 215552 Committed
r158326
: <
http://trac.webkit.org/changeset/158326
>
WebKit Commit Bot
Comment 8
2013-10-30 16:41:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug